fix: finally fixed flipping on safari, shrink text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@
 
 /* back, initially hidden pane */
 .back {
-	transform: rotateY(180deg);
-	-moz-transform: rotateY(180deg);
-	-webkit-transform: rotateY(180deg);
-	-o-transform: rotateY(180deg);
+	transform: rotateY(180deg) translateZ(1px);
+	-moz-transform: rotateY(180deg) translateZ(1px);
+	-webkit-transform: rotateY(180deg) translateZ(1px);
+	-o-transform: rotateY(180deg) translateZ(1px);
 }
