--- a/tailwind.css
+++ b/tailwind.css
@@ -988,6 +988,10 @@ video {
   width: 100vw;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
